--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -24,6 +24,11 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/country-icons/Markup/blocks/lng/i/",
+                "output": "assets/i18n.icon/"
+              },
               "src/assets"
             ],
             "styles": [
