--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build", 
      "build:docs": "ng build --prod --output-path ../docs --base-href /ngtranslating-mastery/docs && cp ../docs/index.html ../docs/404.html ",
-    "commit:docs": "git add ../docs/* ;  git commit ../docs -m \"docs updated\" && git push ../docs",
+    "commit:docs": "(cd .. ; git add docs/* ;  git commit docs -m \"docs updated\" && git push)",
     "release:docs": "npm run build:docs && npm run commit:docs",
     "browse:release": "gixb https://guillaumeisabellex.github.io/ngtranslating-mastery/",
     "browse:repo": "gixb https://github.com/guillaumeisabellex/ngtranslating-mastery",
