--- a/gixng-translating/package.json
+++ b/gixng-translating/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GuillaumeIsabelleX/ngtranslating-mastery.git"
+    "url": "https://github.com/GuillaumeIsabelleX/ngtranslating-mastery/tree/master/gixng-translating"
   },
   "keywords": [
     "angular",
