--- a/gixng-translating/package.json
+++ b/gixng-translating/package.json
@@ -1,10 +1,11 @@
 {
   "name": "gixng-translating",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "A Package to assist in translating angular app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "npm version patch && npm publish"
   },
   "repository": {
     "type": "git",
