--- a/gixng-translating/package.json
+++ b/gixng-translating/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gixng-translating",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A Package to assist in translating angular app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "npm version patch && npm publish"
+    "release": "npm version patch &&sleep 1 && npm publish && echo Publishing done"
   },
   "repository": {
     "type": "git",
