--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,9 @@ jobs:
       - run: pwd && ls docs
       - run: cd ngapp && yarn test
       # && yarn release:docs
+      - run: rm -rf docs/* && echo "Docs cleaned"
+      - run: pwd && ls docs
+      - run: echo "Building in docs"
       - run: cd ngapp && yarn build:docs
       - run: pwd && ls docs
       - run: git add docs/*
