--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,8 @@ jobs:
      # - checkout
 
       - run: git clone https://${GITHUB_TOKEN}@github.com/GuillaumeIsabelleX/ngtranslating-mastery.git .
+      - run:  git pull
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
 
       - run: cd ngapp && yarn install
 
@@ -30,7 +25,17 @@ jobs:
       - run: git config --global user.email "jgi@jgwill.com" && git config --global user.name "Guillaume Isabelle"
 
         # Test and build, release the Docs
-      - run: cd ngapp && yarn test && yarn release:docs
+      - run: ls ngapp/src/assets/i18n
+      - run: pwd && ls docs
+      - run: cd ngapp && yarn test
+      # && yarn release:docs
+      - run: rm -rf docs/* && echo "Docs cleaned"
+      - run: pwd && ls docs
+      - run: echo "Building in docs"
+      - run: cd ngapp && yarn build:docs
+      - run: pwd && ls docs
+      - run: git add docs/*
+     # - run: git commit docs -m "docs updated by CircleCI"
 
         # release:docs using ${GITHUB_TOKEN}
         # https://github.com/GuillaumeIsabelleX/ngtranslating-mastery.git
