--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - run: echo "Building in docs"
       - run: cd ngapp && yarn build:docs
       - run: pwd && ls docs
-      - run: git add docs/*
-      - run: git commit docs -m "docs updated by CircleCI"
+      - run: git add docs
+      - run: git commit docs -m "docs updated by CircleCI" && git push
 
         # release:docs using ${GITHUB_TOKEN}
         # https://github.com/GuillaumeIsabelleX/ngtranslating-mastery.git
