--- a/gcp-translate-api/package.json
+++ b/gcp-translate-api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@exponent/json-file": "^5.3.0",
-    "@google-cloud/translate": "^3.0.1"
+    "@google-cloud/translate": "^3.0.1",
+    "cmd-line": "^1.0.2"
   }
 }
