--- a/gcp-translate-api/package.json
+++ b/gcp-translate-api/package.json
@@ -13,6 +13,7 @@
     "@exponent/json-file": "^5.3.0",
     "@google-cloud/translate": "^3.0.1",
     "cmd-line": "^1.0.2",
+    "ngx-translate-helpercli": "^0.0.5",
     "npm": "^6.9.0",
     "nsset": "^1.0.17",
     "tlid": "^1.0.9"
