--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,15 @@
-version: 2
+version: 2.1
 jobs:
   build:
-    filters:  # using regex filters requires the entire branch to match     
+    filters:    
       tags:
         only: /^v.*/
+
     docker:
       # specify the version you desire here
       - image: circleci/node:10-browsers
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+
 
     working_directory: ~/repo
 
